Fixed text alignment bug on question button

--- a/src/web/src/scss/_question.scss
+++ b/src/web/src/scss/_question.scss
@@ -33,6 +33,7 @@
 .app-controls {
   .app-button--outline {
     display: block;
+    text-align: center;
     margin-bottom: govuk-spacing(3);
     @include govuk-media-query($from: desktop){
       display: inline-block;
